@@ -1,3 +1,10 @@
+2005-04-01 David Mosberger  <davidm@hpl.hp.com>
+
+	* config/tc-ia64.c (ia64_handle_align): Move le_nop and
+	le_nop_stop arrays and initializers to file scope.
+	(md_begin): When generating code for anything other than
+	Itanium 1, use MMI instead of MFI NOP bundles as a filler.
+
 2005-04-01  Jan Beulich  <jbeulich@novell.com>
 
 	* config/tc-i386.c (output_imm): Also set sign flag for 64-bit push
